avenc_aac: downgrade to RANK_NONE until it gets fixed

Currently just fails to initialize.

https://bugzilla.gnome.org/show_bug.cgi?id=691617